Drag drop image currntly not showing, will fix later

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -95,3 +95,11 @@ input[type="text"].focus {
 .field {
     padding: 1.5%;
 }
+
+#dragDropImage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
